<resources>
    <string name="app_name">CarShare</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_closed">Closed</string>
    <string name="ch_y_sprint_xin_nh_tay">First Sprint</string>
    <string name="edit">Edit</string>
    <string name="block">Block</string>
    <string name="change_role">Change Role</string>
    <string name="staff">Staff</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        FCM registration token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>
    <string name="nav_header_desc">Create</string>
    <string name="nav_header_title">User</string>
    <string name="nav_header_subtitle">User@hotmail.com</string>
    <string name="update_car_information">Update car information</string>
    <string name="brand">Brand</string>
    <string name="_0">0</string>
    <string name="color">Color</string>
    <string name="seat">Seat</string>
    <string name="licenseplates">LicensePlates</string>
    <string name="create">Create</string>
    <string name="add_new_car">Add new Car</string>
    <string name="update">Update</string>
    <string name="country_name">Country Name</string>
    <string name="population">Population</string>
    <string name="traveling">Traveling</string>
    <string name="start_a_new_journey">Start a new Journey</string>
    <string name="person">Person</string>
    <string name="admin">Admin</string>
    <string name="sale_staff">Sale Staff</string>
    <string name="car">Car</string>
    <string name="payment">Payment</string>
    <string name="call">Call</string>
    <string name="logo">Logo</string>


    <string name="_1_2">1/2</string>
    <string name="next">Next</string>
    <string name="_2_2">2/2</string>
    <string name="bill_id">Bill ID</string>
    <string name="booking_id">Booking ID</string>
    <string name="bill_create">Bill Create</string>
    <string name="id">ID</string>
    <string name="car_price">Car Price</string>
    <string name="car_pick">Car Pick</string>
    <string name="car_return">Car Return</string>
    <string name="user">User</string>
    <string name="signup_to_start">SignUp to start your car share</string>
    <string name="welcome">Welcome</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_no">Phone No</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="welcome_back">Welcome back</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="select_your_age">Select Your Age</string>
    <string name="customer">Customer</string>
    <string name="sign_up">Sign UP</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="provide_email">Provide your account\'s email for which you want to reset your password</string>
    <string name="name">Name</string>
    <string name="statistical_chart_of_the_most_rented_car_brand">Statistical chart of the most rented car brand</string>
    <string name="time">TIME</string>
    <string name="rules">RULES</string>
    <string name="change">Change</string>
    <string name="_05_11_2000">05/11/2000</string>
    <string name="booking_details">BOOKING DETAILS</string>
    <string name="description_rule">1. Any damage dealt to the vehicle during the rental period is the direct responsibility of user and will be charged extra for the repairs.</string>
    <string name="voucher">VOUCHER</string>
    <string name="enter_voucher_code">Enter voucher code</string>
    <string name="apply">APPLY</string>
    <string name="rental_unit_price">Rental unit price</string>
    <string name="_40_daily">$ 40 / daily</string>
    <string name="discount">Discount</string>
    <string name="_10">- 10%</string>
    <string name="total_price">TOTAL PRICE</string>
    <string name="add_booking">ADD BOOKING</string>
    <string name="_50">+ $50</string>
    <string name="insurance_cost">Insurance cost</string>
    <string name="_500">$ 50</string>
    <string name="_10_00_pm">10:00 PM</string>
    <string name="rule_2"><![CDATA[2. Payment will be made directly to the owner at the time of pickup. Invoice will be sent both to the user and owner.]]></string>
    <string name="car_name">Car Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="search_data_here">Search data here...</string>
    <string name="received_date">Received date</string>
    <string name="resend_time">Resend time</string>
    <string name="resend_date">Resend date</string>
    <string name="received_time">Received time</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="choose_a_date">choose a date</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resent_otp">Resent OTP</string>
    <string name="verification_otp">Verification OTP</string>
</resources>
