<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="222dp"
        android:layout_height="110dp"
        android:background="@drawable/car"
        android:transitionName="logo_image" />

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="113dp"
        android:layout_marginTop="-30dp"
        android:fontFamily="@font/bungee"
        android:text="@string/welcome_back"
        android:textColor="@color/Black1"
        android:textSize="40sp"
        android:transitionName="logo_text" />

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="logo_signup"
        android:text="@string/sign_in_to_continue"
        android:textSize="18sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:id="@+id/txtEmail"
            android:hint="@string/email"
            style ="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtPassword"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            style ="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:transitionName="txt_transaction"
            android:id="@+id/forgotPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/ColorMore"
            android:textColor="@color/Black1"
            android:text="@string/forgot_password"
            android:layout_gravity="right"
            android:elevation="0dp"/>
        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:background="@color/Black1"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        <Button
            android:id="@+id/createText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="@color/ColorMore"
            android:elevation="0dp"
            android:text="@string/new_user_sign_up"
            android:fontFamily="@font/antic"
            android:textColor="@color/Black1" />
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_gravity="center" />

    </LinearLayout>

</LinearLayout>