<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/header_height_navbar"
    android:background="@drawable/bgheader"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/Horizontal_margin"
    android:paddingTop="@dimen/Vertical_margin"
    android:paddingRight="@dimen/Horizontal_margin"
    android:paddingBottom="@dimen/Vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="109dp"
        android:layout_height="93dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/Vertical_spacing_navbar"
        android:src="@drawable/user" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/Vertical_spacing_navbar"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />
</LinearLayout>