<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:elevation="5dp"
    app:cardUseCompatPadding="true">


    <LinearLayout
        android:id="@+id/layout_bill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">


        <TextView
            android:id="@+id/txtBillId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft_layout"
            android:text="@string/bill_id"
            android:textStyle="bold"
            android:textColor="@color/Black1"
            android:textSize="@dimen/size_of_text" />
        <TextView
            android:id="@+id/txtIdbooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft_layout"
            android:text="@string/booking_id"
            android:textColor="@color/Black1"
            android:textSize="@dimen/size_of_text" />
        <TextView
            android:id="@+id/txtBill_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft_layout"
            android:text="@string/bill_create"
            android:textColor="@color/Black1"
            android:textSize="@dimen/size_of_text" />
    </LinearLayout>



</androidx.cardview.widget.CardView>